# square

./: .bumpversion.cfg  .coveragerc  .dockerignore  .env  .gitignore  CLAUDE.md  Changelog.md  Dockerfile  Dockerfile-baseimage  Dockerfile-windows  Pipfile  README.md  build-binaries.sh  df-linux  df-windows  dotdict.py  dtypes.py  k8s.py  k8s_utils.py  manio.py  pyinstaller_entrypoint.py  pyproject.toml  runme.py  schemas.py  setup.cfg  square.py  square.spec  test_dotdict.py  test_helpers.py  test_k8s.py  test_k8s_utils.py  test_manio.py  test_square.py
.circleci/: config.yml
.github/workflows/: build.yml  release.yml  run-tests.yml
deployment/: start_minikube.sh
examples/: .gitignore  README.md  Readme.md  as_library.py  basic_workflow.py  custom_callbacks.py  multi_cluster.py  square.yaml
integration-test-cluster/: global.yaml  mycrds.yaml  square-tests-1.yaml  square-tests-2.yaml  start_cluster.sh  test-resources.yaml
resources/: defaultconfig.yaml  sampleconfig.yaml
square/: __init__.py  __main__.py  callbacks.py  cfgfile.py  dotdict.py  dtypes.py  k8s.py  main.py  manio.py  manio_filters.py  schemas.py  square.py  yaml_io.py
square/resources/: defaultconfig.yaml
support/: kubeconf.yaml
tests/: conftest.py  test_callbacks.py  test_cfgfile.py  test_dotdict.py  test_dtypes.py  test_helpers.py  test_init.py  test_integration.py  test_k8s.py  test_main.py  test_manio.py  test_manio_filters.py  test_schemas.py  test_square.py  test_square_vanilla.py  test_yaml_io.py
tests/support/: api-v1.yaml  apis-v1-15-short.json  apis-v1-15.json  client.crt  client.key  config.yaml  k8s-serviceaccount.yaml  k8s-test-hpa.yaml  k8s-test-resources.yaml  kubeconf.yaml  kubeconf_invalid.yaml
