[project]
name = "kubernetes-square"
version = "2.4.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Oliver Nagy", email = "olitheolix@gmail.com" },
]
dependencies = [
    "colorama>=0.4.6",
    "colorlog>=6.10.1",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "jsonpatch>=1.33",
    "jsonpath-ng>=1.8.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]
classifiers = [
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["square", "square.resources"]

[project.scripts]
square = "square.main:main"

[tool.setuptools.package-data]
square = ["resources/defaultconfig.yaml"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
    "sh>=2.2.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
addopts = "-p no:warnings"
norecursedirs = [".git"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "delme*",
    "square/__main__.py",
    "pyinstaller_entrypoint.py",
]

[tool.coverage.report]
exclude_lines = [
    "codecov-skip",
    "_MEIPASS",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bumpversion]
current_version = "2.4.1"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "square/__init__.py"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
