[project]
name = "kubernetes-square"
version = "2.6.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Oliver Nagy", email = "olitheolix@gmail.com" },
]
dependencies = [
    "colorama>=0.4.6",
    "colorlog>=6.10.1",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "jsonpatch>=1.33",
    "jsonpath-ng>=1.8.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]
classifiers = [
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["square", "square.resources"]

[project.scripts]
square = "square.main:main"

[tool.setuptools.package-data]
square = ["resources/defaultconfig.yaml"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
    "sh>=2.2.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=100"
norecursedirs = [".git"]
asyncio_mode = "auto"
filterwarnings = [
    # Square deliberately forces the `fork` start method (see square/__init__.py)
    # to work around a multiprocessing bug on Python 3.14, and parses YAML in a
    # `multiprocessing.Pool`. The resulting "fork() may lead to deadlocks in the
    # child" notice is therefore expected and would otherwise drown out warnings
    # that originate in Square's own code.
    "ignore:.*fork.*may lead to deadlocks:DeprecationWarning",
    # The integration tests tear down namespaces with a fire-and-forget
    # `kubectl delete ns --force` via `sh` (`_bg=True`). When the test process
    # exits, `sh`'s stdout/stderr reader thread for that still-running
    # subprocess can raise, which pytest surfaces as an unhandled thread
    # exception. It is a benign, timing-dependent artifact of the test harness.
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "delme*",
    "square/__main__.py",
    "pyinstaller_entrypoint.py",
]

[tool.coverage.report]
exclude_lines = [
    "codecov-skip",
    "_MEIPASS",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bumpversion]
current_version = "2.6.0"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "square/__init__.py"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
